# cc-panel

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
scripts/: build-signed.example.sh
src/: App.vue  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: delete_dry.rs  history_dry.rs  probe.rs  resume_dry.rs
src-tauri/src/: confirm.rs  lib.rs  main.rs  models.rs  resume.rs
src-tauri/src/sources/: claude.rs  claude_usage.rs  codex.rs  history.rs  mod.rs
src/assets/: main.css
src/components/confirm/: PendingConfirms.vue
src/components/manager/: SessionManager.vue
src/components/provider/: ProviderCard.vue  UsagePanel.vue
src/components/session/: SessionCard.vue  SessionDetail.vue  SessionList.vue  TodoChecklist.vue
src/components/settings/: SettingsPage.vue
src/composables/: useNow.ts
src/locales/: en.ts  zh.ts
src/stores/: panel.ts
src/utils/: format.ts
